--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public IP Address</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Add web icon -->
     <link rel="icon" type="image/x-icon" href="https://icon-icons.com/downloadimage.php?id=117864&root=1858/ICO/512/&file=iconfinder-dedicatedipaddress-4263513_117864.ico">
-
+    <!-- Add Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Your Public IP Address</h1>
-        <p id="ip-address">Loading...</p>
-    </div>
-
+    <header>
+        <h1>Public IP Address</h1>
+    </header>
+    <main>
+        <div class="container">
+            <p id="ip-address">Loading...</p>
+        </div>
+    </main>
     <footer>
-        <p>Copyrights&copy; 2024 Jas0n0ss</p>
+        <p>&copy; 2024 Jas0n0ss</p>
     </footer>
 
     <script src="script.js"></script>
