--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -61,6 +62,13 @@
             );
             pointer-events: none;
         }
+        .footer {
+            position: absolute;
+            bottom: 10px;
+            font-size: 14px;
+            color: #00ff00;
+            text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00;
+        }
     </style>
 </head>
 <body>
@@ -71,6 +79,7 @@
         <p id="location">Fetching location...</p>
         <p id="isp">Fetching ISP...</p>
     </div>
+    <div class="footer">&copy; Jas0n0ss 2025</div>
 
     <script>
         async function fetchISPInfo() {
@@ -97,4 +106,3 @@
     </script>
 </body>
 </html>
-
